# finanzas-app

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  VERSIONS.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: main.py  openapi.json  pyproject.toml
apps/api/app/ai/: agent.py  tools.py
apps/api/app/core/: alerts.py  comparison.py  debts.py  emergency_fund.py  goals.py  leisure.py  matching.py  money.py  plan.py  pockets.py  simulation.py
apps/api/app/db/: firestore.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: chat.py  close_month.py  comparison.py  debts.py  health.py  leisure.py  plans.py  simulation.py  transactions.py
apps/api/app/security/: auth.py
apps/api/tests/component/: conftest.py  test_api_simulation.py  test_fase2_endpoints.py  test_p0_endpoints.py
apps/api/tests/unit/: test_alerts.py  test_comparison.py  test_emergency_fund.py  test_goals.py  test_leisure.py  test_matching.py  test_money.py  test_plan.py  test_pockets.py  test_simulation.py
apps/web/: .gitignore  AGENTS.md  README.md  package.json  tailwind.config.ts
apps/web/docs/: FUNCIONALIDADES_APP.md  WEB_UI_CODEX_IMPLEMENTATION_GUIDE.md
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/debts/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/plan/: page.tsx
apps/web/src/app/plan-vs-real/: page.tsx
apps/web/src/data/: mock-finance.ts
apps/web/src/types/: finance.ts
infra/: Dockerfile.api
scripts/: seed.py
(+32 files in other folders)
