[project]
name = "finanzas-api"
version = "0.1.0"
description = "Financial Core API (FastAPI) — deterministic engine + Claude agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "firebase-admin",
  "anthropic",
  "httpx",
  "python-dotenv",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff", "pip-audit"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]  # UP042: StrEnum migration deferred (Pydantic compat)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
